--- a/FBAuto/podfile
+++ b/FBAuto/podfile
@@ -10,6 +10,6 @@ pod 'SDWebImage', '~> 3.6'
 pod 'iCarousel', '~> 1.7.6'
 pod 'RegexKitLite', '~> 4.0'
 pod 'MBProgressHUD', '~> 0.8'
-
+pod 'GDataXML-HTML', '~> 1.1.0'
 
 
