--- a/FBAuto/FBAuto/FBAuto-Info.plist
+++ b/FBAuto/FBAuto/FBAuto-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.fblife.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.fblife.fbauto</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
