--- a/FBAuto/FBAuto/FBAuto-Info.plist
+++ b/FBAuto/FBAuto/FBAuto-Info.plist
@@ -29,7 +29,7 @@
 			<string>sina</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wb568898243</string>
+				<string>wb2462467829</string>
 			</array>
 		</dict>
 		<dict>
@@ -49,7 +49,7 @@
 			<string>wx</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wx4868b35061f87885</string>
+				<string>wxd747942b226f56d5</string>
 			</array>
 		</dict>
 	</array>
