--- a/FBAuto/FBAuto/FBAuto-Info.plist
+++ b/FBAuto/FBAuto/FBAuto-Info.plist
@@ -5,9 +5,21 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>e族汽车</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>icon120</string>
+				<string>icon114</string>
+				<string>icon57</string>
+			</array>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>com.fblife.fbauto</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -29,7 +41,7 @@
 			<string>sina</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wb2462467829</string>
+				<string>wb2437553400</string>
 			</array>
 		</dict>
 		<dict>
