--- a/FBAuto/FBAuto/FBAuto-Info.plist
+++ b/FBAuto/FBAuto/FBAuto-Info.plist
@@ -51,7 +51,7 @@
 			<string>QQ</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>QQ05FB8B52</string>
+				<string>QQ41AE6C33</string>
 			</array>
 		</dict>
 		<dict>
