--- a/FBAuto/FBAuto/FBAuto-Info.plist
+++ b/FBAuto/FBAuto/FBAuto-Info.plist
@@ -61,7 +61,7 @@
 			<string>wx</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wxd747942b226f56d5</string>
+				<string>wx0ad0d507a8933b9d</string>
 			</array>
 		</dict>
 	</array>
